--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "index.js",
   "authors": [
-    "Alexandr <ponomarenko.prog@gmail.com>"
+    "Temuchin"
   ],
   "license": "ISC",
   "homepage": "",
