--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.2"
+  },
+  "dependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-rimraf": "^0.2.2"
   }
 }
